// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer-grid render default 1`] = `

<div>
  <div class="grow grid grid-cols-7 gap-4 px-8 bg-secondary dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="pt-6 text-md flex flex-row items-center font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-search mr-3"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          >
          </circle>
          <path d="m21 21-4.3-4.3">
          </path>
        </svg>
        No Results
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;

exports[`explorer-grid renders workspace with edges in 1`] = `

<div>
  <div class="grow grid grid-cols-7 gap-4 px-8 bg-secondary dark:bg-black">
    <div class="col-span-2">
      <div class="pt-6 text-md flex flex-row items-center font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-gallery-thumbnails mr-3"
        >
          <rect
            width="18"
            height="14"
            x="3"
            y="3"
            rx="2"
          >
          </rect>
          <path d="M4 21h1">
          </path>
          <path d="M9 21h1">
          </path>
          <path d="M14 21h1">
          </path>
          <path d="M19 21h1">
          </path>
        </svg>
        Parent
      </div>
      <div class="group relative z-10">
        <div
          class="block rounded-lg border bg-card text-card-foreground shadow-sm transition-all relative my-4 border-foreground cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
          tabindex="1"
          role="article"
        >
          <div class="rounded-t-lg relative flex flex-col w-full p-0">
            <div class="flex items-center justify-between px-3 py-2">
              <h3 class="tracking-tight text-sm font-medium flex items-center">
                a
              </h3>
              <div class="px-2 py-1 border-[1px] border-solid rounded-full">
                <p class="text-xs">
                  1.0.0
                </p>
              </div>
            </div>
            <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
              <p class="text-sm text-muted-foreground/50">
                a@workspace:*
              </p>
              <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
                prod
              </div>
            </div>
          </div>
        </div>
        <div class="absolute border-t border-solid border-muted-foreground w-4 -right-4 top-7">
        </div>
      </div>
    </div>
    <div class="col-span-3">
      <div class="pt-6 text-md flex flex-row items-center font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-gallery-vertical mr-3"
        >
          <path d="M3 2h18">
          </path>
          <rect
            width="18"
            height="12"
            x="3"
            y="6"
            rx="2"
          >
          </rect>
          <path d="M3 22h18">
          </path>
        </svg>
        Selected Item
      </div>
      <div class="relative">
        <div class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 border-muted-foreground">
          <div class="p-6 rounded-t-lg relative flex flex-row -m-px py-3 px-4 bg-primary dark:border dark:border-solid dark:border-muted-foreground text-white dark:text-black rounded-b-lg">
            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center w-full justify-between">
              <div class="flex items-center justify-between">
                <span class="text-sm font-medium">
                  b
                </span>
                <span class="mx-2">
                  ·
                </span>
                <span class="text-sm font-light text-muted-foreground">
                  v1.0.0
                </span>
              </div>
            </h3>
          </div>
          <div class="flex flex-row pl-4 pr-3">
          </div>
        </div>
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;

exports[`explorer-grid with results 1`] = `

<div>
  <div class="grow grid grid-cols-7 gap-4 px-8 bg-secondary dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="pt-6 text-md flex flex-row items-center font-medium">
        Results
      </div>
      <div class="relative">
        <a
          href="#"
          class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 cursor-pointer"
        >
          <div class="rounded-t-lg relative flex flex-row -m-px p-2 px-4 border-b">
            <h3 class="font-semibold tracking-tight text-md grow">
              a@^1.0.0
            </h3>
            <div class="rounded-md border px-2.5 py-0.5 text-xs text-gray-500">
              <span class="font-semibold">
                prod
              </span>
              <span class="px-1 text-gray-400">
                dep of:
              </span>
              <span class="font-semibold">
                file(.):root@1.0.0
              </span>
            </div>
          </div>
          <div class="flex flex-row pl-4 pr-3">
            <p class="text-sm text-muted-foreground grow content-center py-2">
              Resolves to: npm:a@1.0.0
            </p>
          </div>
        </a>
      </div>
      <div class="relative">
        <a
          href="#"
          class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 cursor-pointer"
        >
          <div class="rounded-t-lg relative flex flex-row -m-px p-2 px-4 border-b">
            <h3 class="font-semibold tracking-tight text-md grow">
              b@^1.0.0
            </h3>
            <div class="rounded-md border px-2.5 py-0.5 text-xs text-gray-500">
              <span class="font-semibold">
                dev
              </span>
              <span class="px-1 text-gray-400">
                dep of:
              </span>
              <span class="font-semibold">
                file(.):root@1.0.0
              </span>
            </div>
          </div>
          <div class="flex flex-row pl-4 pr-3">
            <p class="text-sm text-muted-foreground grow content-center py-2">
              Resolves to: npm:b@1.0.0
            </p>
          </div>
        </a>
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;

exports[`explorer-grid with stack 1`] = `

<div>
  <div class="grow grid grid-cols-7 gap-4 px-8 bg-secondary dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="pt-6 text-md flex flex-row items-center font-medium">
        Results
      </div>
      <div class="relative">
        <a
          href="#"
          class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 cursor-pointer"
        >
          <div class="rounded-t-lg relative flex flex-row -m-px p-2 px-4 border-b">
            <h3 class="font-semibold tracking-tight text-md grow">
              a@^1.0.0
            </h3>
            <div class="rounded-md border px-2.5 py-0.5 text-xs text-gray-500">
              <span class="font-semibold">
                prod
              </span>
              <span class="px-1 text-gray-400">
                dep of:
              </span>
              <span class="font-semibold">
                file(.):root@1.0.0
              </span>
            </div>
          </div>
          <div class="flex flex-row pl-4 pr-3">
            <p class="text-sm text-muted-foreground grow content-center py-2">
              Resolves to: npm:a@1.0.0
            </p>
          </div>
        </a>
      </div>
      <div class="relative">
        <div class="absolute border top-1 left-1 w-[99%] h-full bg-card rounded-lg">
        </div>
        <a
          href="#"
          class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 cursor-pointer"
        >
          <div class="rounded-t-lg relative flex flex-row -m-px p-2 px-4 border-b">
            <h3 class="font-semibold tracking-tight text-md grow">
              b@^1.0.0
            </h3>
            <div class="rounded-md border px-2.5 py-0.5 text-xs text-gray-500">
              <span class="px-1 text-gray-400">
                dep of:
              </span>
              <span class="font-semibold">
                2 packages
              </span>
            </div>
          </div>
          <div class="flex flex-row pl-4 pr-3">
            <p class="text-sm text-muted-foreground grow content-center py-2">
              Resolves to: npm:b@1.0.0
            </p>
          </div>
        </a>
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;
